--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.2",
+    "jszip": "^3.10.1",
     "next": "16.1.5",
+    "pdfjs-dist": "^4.4.168",
+    "prisma": "^6.19.2",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-pdf": "^9.1.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
