--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
+    "axios": "^1.13.4",
     "jszip": "^3.10.1",
     "next": "16.1.5",
     "pdfjs-dist": "^4.4.168",
